@@ -1059,6 +1059,10 @@ void ValidateValueType(const TUnversionedValue& value, const TColumnSchema& colu
             CASE(ESimpleLogicalValueType::Uint32)
 
             CASE(ESimpleLogicalValueType::Utf8)
+            CASE(ESimpleLogicalValueType::Date)
+            CASE(ESimpleLogicalValueType::Datetime)
+            CASE(ESimpleLogicalValueType::Timestamp)
+            CASE(ESimpleLogicalValueType::Interval)
 #undef CASE
         }
         YT_ABORT();
