@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* ermolovd: Introduced new time-related logical types. Update via snapshot.
 * ignat: Update operations archive to version 31 (core_info added).
 * ifsmirnov: Changed semantics in merging dynamic table nodes. Update masters via snapshot.
 * avmatrosov: Added copy for replicated tables. Update masters via snapshot.
